# pythonvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello.py  main.cpp
file/: binary_file_parser.cpp  binary_file_parser.h  code_object.cpp  code_object.h
runtime/: universe.cpp  universe.h
runtime/interpreter/: block.cpp  block.h  bytecode.cpp  bytecode.h  frame_object.cpp  frame_object.h  interpreter.cpp  interpreter.h
runtime/mem/: base_types.h
runtime/types/: function.cpp  function.h  integer.cpp  integer.h  klass.cpp  klass.h  object.cpp  object.h  string.cpp  string.h
scripts/: test.sh
tools/: show_file.py
utils/: assert.h  buffered_input_stream.h  logger.cpp  logger.h
